<resources>
    <string name="app_name">Rewards</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="new_user">Create a New User Profile</string>
    <string name="clear_api_key">Tap To Clear Saved API Key</string>
    <string name="remember_login">Remember My Credentials</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="department">Department</string>
    <string name="title">Position</string>
    <string name="your_story">Your Story (%1$d of %2$d):</string>
    <string name="your_story_view">Your Story:</string>
    <string name="save">Save</string>
    <string name="you_need_to_request_an_api_key">You need to request an API key:</string>
    <string name="api_key_needed">API Key Needed</string>
    <string name="student_id_number">Student ID Number</string>
    <string name="prefsFileKey">"MY_PREFS_KEY"</string>
    <string name="api_key">api_key</string>
    <string name="points_awarded">Points Awarded:</string>
    <string name="department_label_string">Department:</string>
    <string name="position_label">Position:</string>
    <string name="points_to_award">Points To Award:</string>
    <string name="profile">profile</string>
    <string name="last_first_name">%1$s, %2$s</string>
    <string name="username_in_parens">(%s)</string>
    <string name="rewards_profile">Reward History (%d):</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="is_edit">isEdit</string>
    <string name="view_leaderboard">View Leaderboard</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="create_profile">Create Profile</string>
    <string name="your_profile">Your Profile</string>
    <string name="reward_points_to_send">Reward points to send:</string>
    <string name="comment_label">Comment: (%1$d of %2$d)</string>
    <string name="current_user_profile">current_user_profile</string>
    <string name="delete_profile">Delete Profile</string>
</resources>